resolução de bugs diversos